--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto:wght@400;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -6,11 +11,34 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+
 a {
   color: inherit;
   text-decoration: none;
 }
+.main{
+  font-family: 'Roboto', sans-serif;
+  font-size:20px
+}
+.container {
+  display: flex;
+}
 
+.container__sidebar {
+  width: 30%;
+  background: #F8F9FF;
+
+}
+
+.container__main {
+  /* Take the remaining width */
+  flex: 1;
+
+  /* Make it scrollable */
+  overflow: auto;
+  background: #EEF1FB;
+
+}
 * {
   box-sizing: border-box;
 }
