--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,22 +23,35 @@ a {
 .container {
   display: flex;
 }
-
+.border-special{
+  border-top:2px solid rgba(0, 0, 0, 0.11);
+}
 .container__sidebar {
-  width: 30%;
+  
   background: #F8F9FF;
 
 }
-
+.hidden-conditional{
+display:block;
+}
+.circle{
+border-radius:50%;
+}
 .container__main {
   /* Take the remaining width */
   flex: 1;
 
   /* Make it scrollable */
   overflow: auto;
-  background: #EEF1FB;
+  
 
 }
 * {
   box-sizing: border-box;
+}
+
+@media (max-width: 1000px){
+hidden-conditional{
+display:none
+}
 }
